Fix horizontal scroll, try

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden;
+}
+
+
 /* Контейнер */
 .header {
     max-width: 1300px;
@@ -1246,7 +1255,7 @@ margin: 0;
     flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
-    padding: 10px 30px;
+    padding: 10px 5%;
     margin: 0;
     list-style: none;
   }
@@ -1401,7 +1410,8 @@ h1.product__review_title.product__reviews_text {
   }
 
   .product__reviews_card {
-    flex: 0 0 85%;
+    flex: 0 0 80%;
+    box-sizing: border-box;
     scroll-snap-align: start;
     background: #fff;
     border-radius: 12px;
@@ -1458,8 +1468,7 @@ h1.product__review_title.product__reviews_text {
 /* FOOTER */
 
 .footer {
-  max-width: 420px;
-  height: 900px;
+width: 100%;
 }
 .all__about_block {
   padding: 0;
